# glm-4.7-flash-serverless

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  engine.py  handler.py  main.py  pyproject.toml  start.sh  test_endpoint.ipynb
.github/workflows/: docker-build.yml
scripts/: build.sh
