[project]
name = "glm-4-7-flash-serverless"
version = "0.1.0"
description = "GLM-4.7-Flash RunPod Serverless"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.40.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
